--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.space-between{
+    justify-content: space-between;
+}
+
+.row{
+    display: flex;
+}
+
+.col{
+    display: flex;
+    flex-direction: column;
+}
+
+.pointer{
+    cursor: pointer;
+}
+
+.white{
+    color: white;
+}
+
+.text-primary{
+    letter-spacing: 5px;
+    font-weight: 400;
+}
+
+.center{
+    align-items: center;
+    text-align: center;
+}
+
