--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -27,6 +27,10 @@
     height: 60px;
 }
 
+h2{
+    letter-spacing: 5px;
+}
+
 .horizontal-mat-list-item{
     /* float: right; */
     display: flex;
@@ -34,6 +38,8 @@
     gap: 15px;
     padding: 20px;
     font-weight: 200;
+    align-items: center;
+    text-align: center;
 }
 
 .horizontal-mat-list-item :hover{
@@ -45,6 +51,10 @@
     font-weight: 200;
     text-decoration:overline;
 
+}
+
+.text-primary{
+    letter-spacing: 2px;
 }
 
 .backgroud{
@@ -86,7 +96,7 @@
     display: flex;
     flex-direction: column;
     color: white;
-    margin-top: 100px;
+    margin-top: 50px;
     padding: 0px 50px;
 }
 
@@ -150,6 +160,7 @@
     padding: 20px;
     font-weight: 200;
     margin-top: 80px;
+    font-size: 32px;
     /* background-color: red; */
 }
 
@@ -165,10 +176,9 @@ h3{
     font-size: 14px;
     text-align: center;
     letter-spacing: 0.5px;
-    position: relative;
-    flex: 1;
-    /* max-width: 300px; */
-    height: auto;
+    /* flex: 1; */
+    max-width: 450px;
+    height: 450px;
     margin: 10px;
     background-color: rgba(47, 43, 43, 0.497);
     cursor: pointer;
@@ -176,26 +186,7 @@ h3{
 
 @media (max-width: 600px)
 {
-    .box{
-        flex: 100%;
-        max-width: 1500px;
-    }
-}
 
-@media (max-width: 1200px)
-{
-    .box{
-        flex: 40%;
-        max-width: 600px;
-    }
-}
-
-@media (max-width: 400px)
-{
-    .box{
-        flex: 100%;
-        max-width: 100px;
-    }
 }
 
 .box:hover{
@@ -204,19 +195,17 @@ h3{
     color: white;
     font-weight: 100;
     font-size: 14px;
-    background-color: rgba(0, 0, 0, 0.479);
+    background-color: rgba(62, 60, 60, 0.825);
     transition-duration: 0.4s;
     scale: 1.03;
     text-align: center;
     letter-spacing: 0.5px;
-    
 }
 
 .grid-box {
-    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /* Wrap items to the next row */
+    justify-content: center; /* Adjust the alignment of items along the main axis */
   }
 
   .quote-img{
